WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152167
Modern IDB: storage/indexeddb/objectstore-count.html fails
https://bugs.webkit.org/show_bug.cgi?id=152167
Summary
Modern IDB: storage/indexeddb/objectstore-count.html fails
Brady Eidson
Reported
2015-12-10 22:37:17 PST
Modern IDB: storage/indexeddb/objectstore-count.html fails Part of the failure is updating the test results for recently added error messages. Part of it is teaching IDB code to accept IDBObjectStore.count(null) <---- with an explicit null argument
Attachments
Patch v1
(5.60 KB, patch)
2015-12-10 22:41 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-10 22:41:04 PST
Created
attachment 267164
[details]
Patch v1
WebKit Commit Bot
Comment 2
2015-12-11 00:00:02 PST
Comment on
attachment 267164
[details]
Patch v1 Clearing flags on attachment: 267164 Committed
r193949
: <
http://trac.webkit.org/changeset/193949
>
WebKit Commit Bot
Comment 3
2015-12-11 00:00:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug